# agent-tags

./: .gitignore  AGENTS.md  README.md  SPEC.md
.agents/skills/agent-tags/: SKILL.md
.agents/skills/agent-tags/references/: SPEC.md
eval/: README.md
eval/scripts/: add_task.sh  compare.sh  evaluate.sh  run_all.sh  run_eval.sh  summary.sh
eval/tasks/: CANDIDATES.md  django__django-13195.tags.diff  pylint-dev__pylint-6528.tags.diff
git-agent-tags/: AGENTS.md  Cargo.toml  README.md
git-agent-tags/src/: cache.rs  check.rs  config.rs  git.rs  graph.rs  main.rs  parser.rs
