[package]
name = "git-agent-tags"
version = "0.1.0"
edition = "2021"
description = "Parse and validate @agents tags in codebases"

[[bin]]
name = "git-agent-tags"
path = "src/main.rs"

[dependencies]
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
colored = "2"
toml = "0.8"
walkdir = "2"
anyhow = "1"
glob = "0.3"
